test : restdocs 문서화를 위한 NoticeBoardControllerTest 작성

--- a/src/docs/index.adoc
+++ b/src/docs/index.adoc
@@ -7,6 +7,62 @@
 :sectlinks:
 :snippets: C:/IntelliJProject/Club-Community_Backend/build/generated-snippets
 
+[[Mebmer-API]]
+== Mebmer API
+
+=== 회원 가입
+
+`POST /api/members/signup`
+
+회원 가입을 위한 API입니다.
+
+==== 요청
+
+include::{snippets}/member-controller/signup/request-fields.adoc[]
+
+.Request Example
+include::{snippets}/member-controller/signup/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/member-controller/signup/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/member-controller/signup/http-response.adoc[]
+
+=== 회원 정보 업데이트
+
+`PATCH /api/members/pending`
+
+회원 정보를 업데이트하는 API입니다.
+
+==== 요청
+
+include::{snippets}/member-controller/update/request-fields.adoc[]
+
+.Request Example
+include::{snippets}/member-controller/update/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/member-controller/update/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/member-controller/update/http-response.adoc[]
+
+=== 현재 로그인된 회원 정보 조회
+
+`GET /api/members/me`
+
+현재 로그인된 회원의 정보를 조회하는 API입니다.
+
+==== 응답
+
+include::{snippets}/member-controller/readMe/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/member-controller/readMe/http-response.adoc[]
+
 [[Club-API]]
 == Club API
 
@@ -120,62 +176,6 @@ include::{snippets}/club-controller-test/delete-club-member/http-request.adoc[]
 
 include::{snippets}/club-controller-test/delete-club-member/response-body.adoc[]
 
-[[Mebmer-API]]
-== Mebmer API
-
-=== 회원 가입
-
-`POST /api/members/signup`
-
-회원 가입을 위한 API입니다.
-
-==== 요청
-
-include::{snippets}/member-controller/signup/request-fields.adoc[]
-
-.Request Example
-include::{snippets}/member-controller/signup/http-request.adoc[]
-
-==== 응답
-
-include::{snippets}/member-controller/signup/response-fields.adoc[]
-
-.Response Example
-include::{snippets}/member-controller/signup/http-response.adoc[]
-
-=== 회원 정보 업데이트
-
-`PATCH /api/members/pending`
-
-회원 정보를 업데이트하는 API입니다.
-
-==== 요청
-
-include::{snippets}/member-controller/update/request-fields.adoc[]
-
-.Request Example
-include::{snippets}/member-controller/update/http-request.adoc[]
-
-==== 응답
-
-include::{snippets}/member-controller/update/response-fields.adoc[]
-
-.Response Example
-include::{snippets}/member-controller/update/http-response.adoc[]
-
-=== 현재 로그인된 회원 정보 조회
-
-`GET /api/members/me`
-
-현재 로그인된 회원의 정보를 조회하는 API입니다.
-
-==== 응답
-
-include::{snippets}/member-controller/readMe/response-fields.adoc[]
-
-.Response Example
-include::{snippets}/member-controller/readMe/http-response.adoc[]
-
 
 [[Image-Board-API]]
 == Image Board API
@@ -278,3 +278,105 @@ include::{snippets}/image-board-controller/delete/http-request.adoc[]
 
 .Response Example
 include::{snippets}/image-board-controller/delete/http-response.adoc[]
+
+[[Notice-Board-API]]
+== Notice Board API
+
+=== 공지사항 게시물 생성
+
+`POST /api/boards/notice`
+
+공지사항 게시물을 생성하는 API입니다.
+
+==== 요청
+
+include::{snippets}/notice-board-controller/create/request-fields.adoc[]
+
+.Request Example
+include::{snippets}/notice-board-controller/create/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/notice-board-controller/create/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/notice-board-controller/create/http-response.adoc[]
+
+=== 공지사항 게시물 수정
+
+`PATCH /api/boards/notice/{id}`
+
+공지사항 게시물을 수정하는 API입니다.
+
+==== 요청
+
+include::{snippets}/notice-board-controller/update/path-parameters.adoc[]
+include::{snippets}/notice-board-controller/update/request-fields.adoc[]
+
+.Request Example
+include::{snippets}/notice-board-controller/update/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/notice-board-controller/update/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/notice-board-controller/update/http-response.adoc[]
+
+=== 공지사항 게시물 조회
+
+`GET /api/boards/notice/{id}`
+
+특정 공지사항 게시물을 조회하는 API입니다.
+
+==== 요청
+
+include::{snippets}/notice-board-controller/read/path-parameters.adoc[]
+
+.Request Example
+include::{snippets}/notice-board-controller/read/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/notice-board-controller/read/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/notice-board-controller/read/http-response.adoc[]
+
+=== 클럽의 모든 공지사항 게시물 조회
+
+`GET /api/boards/notice/club/{clubId}`
+
+특정 클럽의 모든 공지사항 게시물을 조회하는 API입니다.
+
+==== 요청
+
+include::{snippets}/notice-board-controller/readAll/path-parameters.adoc[]
+
+.Request Example
+include::{snippets}/notice-board-controller/readAll/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/notice-board-controller/readAll/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/notice-board-controller/readAll/http-response.adoc[]
+
+=== 공지사항 게시물 삭제
+
+`DELETE /api/boards/notice/{id}`
+
+특정 공지사항 게시물을 삭제하는 API입니다.
+
+==== 요청
+
+include::{snippets}/notice-board-controller/delete/path-parameters.adoc[]
+
+.Request Example
+include::{snippets}/notice-board-controller/delete/http-request.adoc[]
+
+==== 응답
+
+.Response Example
+include::{snippets}/notice-board-controller/delete/http-response.adoc[]
