--- a/src/docs/index.adoc
+++ b/src/docs/index.adoc
@@ -482,3 +482,105 @@ include::{snippets}/recruitment-board-controller/delete/http-request.adoc[]
 
 .Response Example
 include::{snippets}/recruitment-board-controller/delete/http-response.adoc[]
+
+[[Video-Board-API]]
+== Video Board API
+
+=== 비디오 게시물 생성
+
+`POST /api/boards/video`
+
+비디오 게시물을 생성하는 API입니다.
+
+==== 요청
+
+include::{snippets}/video-board-controller/create/request-parts.adoc[]
+
+.Request Example
+include::{snippets}/video-board-controller/create/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/video-board-controller/create/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/video-board-controller/create/http-response.adoc[]
+
+=== 비디오 게시물 수정
+
+`PATCH /api/boards/video/{id}`
+
+비디오 게시물을 수정하는 API입니다.
+
+==== 요청
+
+include::{snippets}/video-board-controller/update/path-parameters.adoc[]
+include::{snippets}/video-board-controller/update/request-parts.adoc[]
+
+.Request Example
+include::{snippets}/video-board-controller/update/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/video-board-controller/update/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/video-board-controller/update/http-response.adoc[]
+
+=== 비디오 게시물 조회
+
+`GET /api/boards/video/{id}`
+
+특정 비디오 게시물을 조회하는 API입니다.
+
+==== 요청
+
+include::{snippets}/video-board-controller/read/path-parameters.adoc[]
+
+.Request Example
+include::{snippets}/video-board-controller/read/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/video-board-controller/read/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/video-board-controller/read/http-response.adoc[]
+
+=== 클럽의 모든 비디오 게시물 조회
+
+`GET /api/boards/video/club/{clubId}`
+
+특정 클럽의 모든 비디오 게시물을 조회하는 API입니다.
+
+==== 요청
+
+include::{snippets}/video-board-controller/readAll/path-parameters.adoc[]
+
+.Request Example
+include::{snippets}/video-board-controller/readAll/http-request.adoc[]
+
+==== 응답
+
+include::{snippets}/video-board-controller/readAll/response-fields.adoc[]
+
+.Response Example
+include::{snippets}/video-board-controller/readAll/http-response.adoc[]
+
+=== 비디오 게시물 삭제
+
+`DELETE /api/boards/video/{id}`
+
+특정 비디오 게시물을 삭제하는 API입니다.
+
+==== 요청
+
+include::{snippets}/video-board-controller/delete/path-parameters.adoc[]
+
+.Request Example
+include::{snippets}/video-board-controller/delete/http-request.adoc[]
+
+==== 응답
+
+.Response Example
+include::{snippets}/video-board-controller/delete/http-response.adoc[]
